# pymodaq_plugins_qutools

./: .gitignore  LICENSE  README.rst  pyproject.toml
doc/: exp.py  statistics.py  timings.tex
src/pymodaq_plugins_qutools/: common.py  histogram.py
src/pymodaq_plugins_qutools/app/: qutag.py
src/pymodaq_plugins_qutools/daq_viewer_plugins/common/: qutag_common.py
src/pymodaq_plugins_qutools/daq_viewer_plugins/plugins_0D/: daq_0Dviewer_MockQutag.py  daq_0Dviewer_MockQutagStart.py  daq_0Dviewer_Qutag.py  daq_0Dviewer_QutagStart.py  daq_0Dviewer_Qutools.py
src/pymodaq_plugins_qutools/daq_viewer_plugins/plugins_1D/: daq_1Dviewer_MockLifetimeQutag.py  daq_1Dviewer_MockPsQutag.py  daq_1Dviewer_MockQutag.py  daq_1Dviewer_Qutag.py  daq_1Dviewer_QutagTA.py  daq_1Dviewer_Qutag_hist.py  daq_1Dviewer_Qutag_hist_simu.py
src/pymodaq_plugins_qutools/extensions/: qutag.py
src/pymodaq_plugins_qutools/hardware/: QuTAG_HR.py  controller.py  qutag_controller.py
